# rendermesh

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.artifact  README.md  docker-compose.yaml
.github/workflows/: release.yaml
docs/: architecture.md  cdn-refresh.md  configuration.md  edge-config.md  edge-hooks.md  local-mirror-and-sync.md  observability.md  overview.md  release.md  templates.md  testing.md
docs/superpowers/plans/: 2026-05-18-local-compose-lab.md  2026-05-18-rendermesh-mvp-implementation.md
docs/superpowers/specs/: 2026-05-18-rendermesh-mvp-design.md  2026-05-22-local-origin-design.md  2026-05-22-origin-freshness-index-design.md
examples/local/: README.md  rendermesh.yaml
examples/local/bucket/: index.html  static.html
migrations/: 202601020000_init.sql
scripts/: init-template.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src/dto/: echo.rs  edge.rs  health.rs  manifest.rs  mod.rs  render.rs
src/libs/: mod.rs  observability.rs  telemetry.rs
src/repositories/: cdn.rs  cloudflare_cdn.rs  cloudfront_cdn.rs  database.rs  edge_http.rs  local_directory_storage.rs  local_mirror.rs  manifest.rs  mod.rs  origin_storage.rs  s3_storage.rs  sync.rs
src/routes/: cors.rs  mcp.rs  mod.rs  render.rs
src/services/: cdn_domains.rs  cdn_refresh.rs  config_format.rs  cors.rs  echo.rs  edge_config.rs  edge_config_store.rs  edge_hooks.rs  freshness.rs  health.rs  manifest.rs  mod.rs  origin_runtime.rs  render_gateway.rs  startup.rs  static_rules.rs  template_store.rs
tests/: integration.rs  local_directory_storage.rs
(+9 files in other folders)
